qualified_do_macro/tests/failures/error_case01.stderr
error: expected at least one statement
 --> tests/failures/error_case01.rs:4:23
  |
4 |     qdo! {hoge::fuga {}}
  |                       ^
